--- a/web/lib/_themes.scss
+++ b/web/lib/_themes.scss
@@ -17,20 +17,20 @@ light: (
   secondaryColorDark: rgba(91, 149, 2, 1.0),
   backgroundColor: rgba(254, 254, 254, 1.0),
   surfaceColor: rgba(254, 254, 254, 1.0),
-  dividerColor: rgba(0, 0, 0, 0.12156862745098039),
+  dividerColor: rgba(238, 238, 238, 1.0),
   errorColor: rgba(176, 0, 32, 1.0),
   onPrimaryColor: rgba(255, 255, 255, 1.0),
   onPrimaryColorLight: rgba(255, 255, 255, 1.0),
   onPrimaryColorDark: rgba(255, 255, 255, 1.0),
   onSecondaryColor: rgba(0, 0, 0, 1.0),
   onSecondaryColorLight: rgba(0, 0, 0, 1.0),
-  onSecondaryColorDark: rgba(0, 0, 0, 1.0),
+  onSecondaryColorDark: rgba(255, 255, 255, 1.0),
   onBackgroundColor: rgba(0, 0, 0, 0.8666666666666667),
   onSurfaceColor: rgba(0, 0, 0, 0.8666666666666667),
   onErrorColor: rgba(255, 255, 255, 1.0),
   primaryButtonColor: rgba(91, 149, 2, 1.0),
   secondaryButtonColor: rgba(12, 73, 100, 1.0),
-  onPrimaryButtonColor: rgba(0, 0, 0, 1.0),
+  onPrimaryButtonColor: rgba(255, 255, 255, 1.0),
   onSecondaryButtonColor: rgba(255, 255, 255, 1.0),
   // Fonts.
   display4: (
@@ -105,20 +105,20 @@ dark: (
   secondaryColorDark: rgba(91, 149, 2, 1.0),
   backgroundColor: rgba(51, 51, 51, 1.0),
   surfaceColor: rgba(51, 51, 51, 1.0),
-  dividerColor: rgba(255, 255, 255, 0.10196078431372549),
+  dividerColor: rgba(72, 72, 72, 1.0),
   errorColor: rgba(176, 0, 32, 1.0),
   onPrimaryColor: rgba(255, 255, 255, 1.0),
   onPrimaryColorLight: rgba(255, 255, 255, 1.0),
   onPrimaryColorDark: rgba(255, 255, 255, 1.0),
   onSecondaryColor: rgba(0, 0, 0, 1.0),
   onSecondaryColorLight: rgba(0, 0, 0, 1.0),
-  onSecondaryColorDark: rgba(0, 0, 0, 1.0),
+  onSecondaryColorDark: rgba(255, 255, 255, 1.0),
   onBackgroundColor: rgba(255, 255, 255, 1.0),
   onSurfaceColor: rgba(255, 255, 255, 1.0),
   onErrorColor: rgba(255, 255, 255, 1.0),
   primaryButtonColor: rgba(91, 149, 2, 1.0),
   secondaryButtonColor: rgba(12, 73, 100, 1.0),
-  onPrimaryButtonColor: rgba(0, 0, 0, 1.0),
+  onPrimaryButtonColor: rgba(255, 255, 255, 1.0),
   onSecondaryButtonColor: rgba(255, 255, 255, 1.0),
   // Fonts.
   display4: (
