--- a/web/lib/src/event_list/event_list.scss
+++ b/web/lib/src/event_list/event_list.scss
@@ -1,4 +1,15 @@
-//@import 'package:toledotechevents_web/themes';
-material-list {
+@import 'package:toledotechevents_web/themes';
+@import 'package:angular_components/material_list/mixins';
 
+:host {
+  @include themify {
+    material-list-item:hover, material-list-item:hover * {
+      background: themed('dividerColor');
+    }
+  }
 }
+
+material-list {
+  background-color: inherit;
+}
+
