moved assets, made splash for web

--- a/web/lib/_themes.scss
+++ b/web/lib/_themes.scss
@@ -219,6 +219,24 @@ dark: (
 //
 // Styles
 //
+
+// Fonts
+@font-face {
+  font-family: 'Open Sans';
+  src: url('packages/toledotechevents/assets/fonts/OpenSans-Regular.ttf') format('truetype'),
+    url('packages/toledotechevents/assets/fonts/OpenSans-SemiBold.ttf') format('truetype'),
+    url('packages/toledotechevents/assets/fonts/OpenSans-Light.ttf') format('truetype'),
+    url('packages/toledotechevents/assets/fonts/OpenSans-Bold.ttf') format('truetype'),
+    url('packages/toledotechevents/assets/fonts/OpenSans-Italic.ttf') format('truetype');
+}
+@font-face {
+  font-family: 'Ubuntu';
+  src: url('packages/toledotechevents/assets/fonts/Ubuntu-Regular.ttf') format('truetype'),
+    url('packages/toledotechevents/assets/fonts/Ubuntu-Bold.ttf') format('truetype'),
+    url('packages/toledotechevents/assets/fonts/Ubuntu-Light.ttf') format('truetype');
+}
+
+// Material design Sass globals.
 body {
   @include themify {
     // `angular_components` global vars.
