--- a/web/lib/_themes.scss
+++ b/web/lib/_themes.scss
@@ -223,17 +223,41 @@ dark: (
 // Fonts
 @font-face {
   font-family: 'Open Sans';
-  src: url('packages/toledotechevents/assets/fonts/OpenSans-Regular.ttf') format('truetype'),
-    url('packages/toledotechevents/assets/fonts/OpenSans-SemiBold.ttf') format('truetype'),
-    url('packages/toledotechevents/assets/fonts/OpenSans-Light.ttf') format('truetype'),
-    url('packages/toledotechevents/assets/fonts/OpenSans-Bold.ttf') format('truetype'),
-    url('packages/toledotechevents/assets/fonts/OpenSans-Italic.ttf') format('truetype');
+  src: url('packages/toledotechevents/assets/fonts/OpenSans-Regular.ttf') format('truetype');
+}
+@font-face {
+  font-family: 'Open Sans';
+  font-weight: 500;
+  src: url('packages/toledotechevents/assets/fonts/OpenSans-SemiBold.ttf') format('truetype');
+}
+@font-face {
+  font-family: 'Open Sans';
+  font-weight: 300;
+  src: url('packages/toledotechevents/assets/fonts/OpenSans-Light.ttf') format('truetype');
+}
+@font-face {
+  font-family: 'Open Sans';
+  font-weight: 700;
+  src: url('packages/toledotechevents/assets/fonts/OpenSans-Bold.ttf') format('truetype');
+}
+@font-face {
+  font-family: 'Open Sans';
+  font-style: italic;
+  src: url('packages/toledotechevents/assets/fonts/OpenSans-Italic.ttf') format('truetype');
 }
 @font-face {
   font-family: 'Ubuntu';
-  src: url('packages/toledotechevents/assets/fonts/Ubuntu-Regular.ttf') format('truetype'),
-    url('packages/toledotechevents/assets/fonts/Ubuntu-Bold.ttf') format('truetype'),
-    url('packages/toledotechevents/assets/fonts/Ubuntu-Light.ttf') format('truetype');
+  src: url('packages/toledotechevents/assets/fonts/Ubuntu-Regular.ttf') format('truetype');
+}
+@font-face {
+  font-family: 'Ubuntu';
+  font-weight: 300;
+  src: url('packages/toledotechevents/assets/fonts/Ubuntu-Light.ttf') format('truetype');
+}
+@font-face {
+  font-family: 'Ubuntu';
+  font-weight: 700;
+  src: url('packages/toledotechevents/assets/fonts/Ubuntu-Bold.ttf') format('truetype');
 }
 
 // Material design Sass globals.
@@ -409,19 +433,23 @@ body {
 .primary-button {
   @include themify {
     font: themed2('button', 'font');
+    font-size: 16px;
     text-decoration: themed2('button', 'text-decoration');
     background-color: themed('primaryButtonColor');
     color: themed('onPrimaryButtonColor');
     border-radius: themed('buttonCornerRadius');
   }
+  padding: 4px 8px;
 }
 
 .secondary-button {
   @include themify {
     font: themed2('button', 'font');
+    font-size: 16px;
     text-decoration: themed2('button', 'text-decoration');
     background-color: themed('secondaryButtonColor');
     color: themed('onSecondaryButtonColor');
     border-radius: themed('buttonCornerRadius');
   }
+  padding: 4px 8px;
 }
