moving theme to external

--- a/web/lib/_themes.scss
+++ b/web/lib/_themes.scss
@@ -191,33 +191,26 @@ dark: (
 
 @mixin themify {
   @each $theme, $map in $themes {
-
     .theme-#{$theme} & {
       $theme-map: () !global;
       @each $key, $submap in $map {
         $value: map-get(map-get($themes, $theme), '#{$key}');
         $theme-map: map-merge($theme-map, ($key: $value)) !global;
       }
-
       @content;
       $theme-map: null !global;
     }
-
   }
 }
 
-@function themed($key1, $key2: null, $key3: null) {
-  $v1: map-get($theme-map, $key1);
-  @if $key2 != null {
-    $v2: map-get($v1, $key2);
-    @if $key3 != null {
-      @return map-get($v2, $key3);
-    } @else {
-      @return $v2;
-    }
-  } @else {
-    @return $v1;
+// Get a theme variable arbitrarily deep in the $theme-map.
+// <key1>, [key2, key3, ...]
+@function themed($keys...) {
+  $map: $theme-map;
+  @each $key in $keys {
+    $map: map-get($map, $key);
   }
+  @return $map;
 }
 
 
