--- a/web/web/styles.scss
+++ b/web/web/styles.scss
@@ -10,7 +10,7 @@
   }
 }
 material-ripple *, [class*="material-"] * {
-  background-color: transparent !important;
+  background-color: initial !important;
   color: inherit !important;
 }
 
